Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title> Well Formed HTML Document lab </title>
   </head>
   <body>
-    
+    <p> 
+      Learning Goals
+    </p>
+    <ul>
+      <li> </li>
+    </ul>
+Add an appropriate DOCTYPE tag to the top of an HTML file
+Add opening and closing html tags
+Add opening and closing head and body tags
+Add title tags
   </body>
 </html>
