Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <title> Well Formed HTML Document lab </title>
   </head>
   <body>
-    <p> 
+    <h3> 
       Learning Goals
-    </p>
+    </h3>
     <ul>
-      <li> </li>
+      <li> Add an appropriate DOCTYPE tag to the top of an HTML file</li>
+      <li> Add opening and closing html tags</li>
+      <li> Add opening and closing head and body tags</li>
+      <li> Add title tags</li>
+      
     </ul>
-Add an appropriate DOCTYPE tag to the top of an HTML file
-Add opening and closing html tags
-Add opening and closing head and body tags
-Add title tags
+
+
+
+
   </body>
 </html>
