Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         View Your Work in the Browser
       </h4>
       <p>
-     
-      </p><p>
+        While working through these assignments, your general workflow should center on writing code in the text editor and periodically running learn in the terminal to check your work.
+      </p>
+      <p>
      
       </p>
       <p>
