Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         While working through these assignments, your general workflow should center on writing code in the text editor and periodically running learn in the terminal to check your work.
       </p>
       <p>
+        Another great way to track your progress is to open up the HTML document in your browser and watch how each change you make in the text editor affects the visual layout in the browser. For reference, here's a guide to 
+        <a href=""> </a>
      
       </p>
       <p>
