Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </p>
       <p>
         Another great way to track your progress is to open up the HTML document in your browser and watch how each change you make in the text editor affects the visual layout in the browser. For reference, here's a guide to 
-        <a href=""> </a>
+        <a href="https://help.learn.co/en/articles/493050-viewing-html-pages-in-the-learn-ide"> </a>
      
       </p>
       <p>
